--- a/estilos/main.css
+++ b/estilos/main.css
@@ -2737,7 +2737,24 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  margin: 20px 0 40px 0;
+  padding: 20px 0 40px 0;
+  background-color: #043191;
+}
+
+.seccionCompraServicio .usuario {
+  text-align: center;
+  color: #f0f0f0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  font-size: 13px;
+}
+
+.seccionCompraServicio .usuario #usuario {
+  text-align: center;
+  color: #f0f0f0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: normal;
+  font-size: 17px;
 }
 
 .seccionCompraServicio #btnComprar {
@@ -2763,7 +2780,7 @@ body {
 
 .seccionCompraServicio h2 {
   text-align: center;
-  color: #043191;
+  color: #f0f0f0;
   font-family: "Montserrat", sans-serif;
   font-size: 30px;
 }
