--- a/estilos/main.css
+++ b/estilos/main.css
@@ -2725,6 +2725,10 @@ body {
   }
 }
 
+#fondo2 {
+  background-color: #043191;
+}
+
 .seccionCompraServicio {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2839,9 +2843,43 @@ body {
 
 .tituloBoleta {
   text-align: center;
-  color: #043191;
+  color: #f0f0f0;
   font-family: "Montserrat", sans-serif;
   font-size: 30px;
+}
+
+.imprimir {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+
+.imprimir div {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  padding: 1px;
+  width: 20vw;
+  margin: 5px 0;
+  font-family: "Montserrat", sans-serif;
+  color: #043191;
+  background-color: white;
+  border-style: none;
+}
+
+.imprimir div h4 a {
+  color: #043191;
+  text-decoration: none;
 }
 
 .divBoleta {
@@ -3023,5 +3061,142 @@ body {
   border-width: 0.5px;
   border-color: rgba(255, 255, 255, 0.596);
   font-family: "Montserrat", sans-serif;
+}
+
+.encabezadoRecibo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: right;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #043191;
+  margin: 0px 50px 40px 50px;
+}
+
+.encabezadoRecibo .encabezadoOtros {
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #c8d6e4;
+  width: 100vw;
+  margin: 30px 0px 4px 0;
+  padding-right: 30px;
+}
+
+.encabezadoRecibo img {
+  height: 100px;
+  margin: 0;
+  position: absolute;
+  -ms-flex-item-align: left;
+      -ms-grid-row-align: left;
+      align-self: left;
+  padding: 0;
+}
+
+.encabezadoRecibo h3 {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  color: black;
+  font-family: "Montserrat", sans-serif;
+  font-weight: normal;
+  font-size: 12px;
+}
+
+a {
+  color: #043191;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+a #img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  position: absolute;
+  width: 120px;
+  background-color: rgba(233, 236, 245, 0.863);
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 23px 10px 18px 10px;
+  margin: 0 10px 20px 30px;
+  border-radius: 0 0 10% 10%;
+  -webkit-box-shadow: 3px 3px 7px rgba(113, 124, 124, 0.322);
+          box-shadow: 3px 3px 7px rgba(113, 124, 124, 0.322);
+}
+
+a #img img {
+  height: 120px;
+  margin: 0;
+  padding: 0;
+}
+
+h2 {
+  text-align: center;
+  color: #043191;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+#bgBoleta {
+  background-color: white;
+}
+
+.turnoRecibo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+}
+
+.turnoRecibo #tablaTurnos td {
+  color: black;
+  font-family: "Montserrat", sans-serif;
+  width: 100px;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: #043191;
+  font-weight: bold;
+  font-size: 12px;
+  padding: 7px 20px;
+  margin: 0px;
+}
+
+.turnoRecibo #datosReciboTr td {
+  font-size: 12px;
+  color: black;
+  font-family: "Montserrat", sans-serif;
+}
+
+.turnoRecibo #precioTotal td {
+  font-weight: bold;
+  font-size: 12px;
+  color: black;
+  font-family: "Montserrat", sans-serif;
+  padding-top: 7px;
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: #043191;
+}
+
+div {
+  margin-bottom: 70px;
 }
 /*# sourceMappingURL=main.css.map */
