--- a/estilos/_general.scss
+++ b/estilos/_general.scss
@@ -9,9 +9,8 @@ $colorBlanco:rgb(240, 240, 240);
 $colorNegroFooter:rgb(17, 17, 17);
 $colorNegro:black;
 $colorbg:rgba(170, 178, 192, 0.705);
-$colorbgObj:rgba(233, 236, 245, 0.863);
+$colorbgObj:rgb(233, 236, 245);
 $colorHover:rgb(200, 214, 228);
-
 
 $monserrat:'Montserrat', sans-serif;
 $roboto:'Roboto Slab', serif;
@@ -31,7 +30,6 @@ $nFooterMobile:18px;
   $anpersandFMobile:13px;
   $comercioFMobile:14px;
   $textoFooter:14px;
-
 
 //TABLET
 $fsTablet:14px;
