--- a/estilos/_comprar.scss
+++ b/estilos/_comprar.scss
@@ -263,6 +263,13 @@
 }
 }
 
+.ajax{
+  #ajax{
+    color:$colorBlanco;
+    font-family: $monserrat;
+    font-weight: bold;
+  }
+}
 
 .estiloForm {
   background-color: rgba(124, 149, 196, 0.637);
