--- a/estilos/main.css
+++ b/estilos/main.css
@@ -2726,6 +2726,13 @@ body {
 }
 
 #fondo2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-color: #043191;
 }
 
@@ -3074,21 +3081,29 @@ body {
 }
 
 p #pSelect {
-  margin-top: 70px;
-  margin-left: 45%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
   color: #f0f0f0;
   font-family: "Montserrat", sans-serif;
+  margin-top: 80px;
   font-weight: bold;
 }
 
 select {
   border-style: none;
   background-color: #f0f0f0;
-  margin-left: 43%;
-  margin-bottom: 70px;
   height: 25px;
   width: 20%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-align: center;
+  margin-bottom: 80px;
   color: #043191;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
